--- a/css/estilo.css
+++ b/css/estilo.css
@@ -2,6 +2,9 @@
   padding: 0px;
   box-sizing: border-box;
 }
+body{
+    overflow-x: hidden;
+ }
 
 header {position: sticky;
     top: 0px ;
@@ -87,10 +90,15 @@ p {
         animation-duration: 2s;
     animation-name: aparecer;}   
 .seccion {
-        background-color:#E17457 ;
         display: flex;
         justify-content: space-around;
+        margin-top: 20px ;
     }    
+.seccionInicio {
+    display: flex;
+    justify-content: space-around;
+    background-color:#E17457 ;
+}    
 
 .cardP {
     margin: 0px;
@@ -105,7 +113,7 @@ h5 {
 .card-text {
     color: #3d3c3c;
 }
-.btn {
+.boton {
     background-color:#2C3673;
     text-align: center;
 }
@@ -145,4 +153,21 @@ h1 {
     color:#3d3d3d;
     font-size: large;
     font-weight: bold;
+}
+.botonBlog {
+    background-color: #DB2E62 !important;
+    text-align: center;
+}
+.contacto {
+    font-family: 'Bebas Neue', cursive;
+    font-size: 65px;
+    text-align: center;
+            font-size: 90px;
+            text-align: center;
+            margin: 30px;
+    color: #DB2E62;        
+    }
+.calendario {
+    width: 400px;
+    height: 400px;
 }
